Colab을 통해 생성됨

--- a/1~10.ipynb
+++ b/1~10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjEIwzDHpHXFCAdUmZ27WW",
+      "authorship_tag": "ABX9TyOHydhfEZ8PbI/dguoUdgOq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,62 +152,16 @@
       "cell_type": "code",
       "source": [
         "import keyword\n",
-        "keyword.kwlist"
+        "\n",
+        "# keyword.kwlist 실행 시 출력 되는 값\n",
+        "# ['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for',\n",
+        "# 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tQmjObj4I98O",
-        "outputId": "9d7b8d11-8ff2-435d-f8bc-dc792b8ed44e"
+        "id": "zRtUqy7zVXY-"
       },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['False',\n",
-              " 'None',\n",
-              " 'True',\n",
-              " 'and',\n",
-              " 'as',\n",
-              " 'assert',\n",
-              " 'async',\n",
-              " 'await',\n",
-              " 'break',\n",
-              " 'class',\n",
-              " 'continue',\n",
-              " 'def',\n",
-              " 'del',\n",
-              " 'elif',\n",
-              " 'else',\n",
-              " 'except',\n",
-              " 'finally',\n",
-              " 'for',\n",
-              " 'from',\n",
-              " 'global',\n",
-              " 'if',\n",
-              " 'import',\n",
-              " 'in',\n",
-              " 'is',\n",
-              " 'lambda',\n",
-              " 'nonlocal',\n",
-              " 'not',\n",
-              " 'or',\n",
-              " 'pass',\n",
-              " 'raise',\n",
-              " 'return',\n",
-              " 'try',\n",
-              " 'while',\n",
-              " 'with',\n",
-              " 'yield']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
+      "execution_count": 22,
+      "outputs": []
     },
     {
       "cell_type": "code",
