--- a/데이터분석실무/6장/cha6_ipynb의_사본.ipynb
+++ b/데이터분석실무/6장/cha6_ipynb의_사본.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/kimheeseo/python/blob/main/cha6_ipynb%EC%9D%98_%EC%82%AC%EB%B3%B8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "VmMF3iXEnMK4"
       },
       "source": [
@@ -11757,10 +11747,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "mount_file_id": "1vRi3PoPl1KkMrur0Lu00cA0xCavHdAPT",
-      "authorship_tag": "ABX9TyPaTQ+dqVuHtLQTF+Ei+eIn",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
