Colab을 통해 생성됨

--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -253,10 +253,25 @@
         "w[1] # 거의 0.5에 가까워진다."
       ],
       "metadata": {
-        "id": "2Azh_n0aP2Zo"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2Azh_n0aP2Zo",
+        "outputId": "77072f64-4182-48ab-d3cb-a26462fcb0db"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.46219950999626624"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -264,10 +279,25 @@
         "w[0] # 거의 0.5에 가까워진다."
       ],
       "metadata": {
-        "id": "Q5yed__hP2hL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q5yed__hP2hL",
+        "outputId": "de8ee11b-a318-437f-a441-c686d4ff00db"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5456391474004311"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -276,10 +306,25 @@
         "# 따라서 그래프 내에 그래프의 경우, y=-x+1의 꼴로 결과값이 도출된다."
       ],
       "metadata": {
-        "id": "Or6JaTbjP2jt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Or6JaTbjP2jt",
+        "outputId": "9c64bb5d-d153-48ca-d90e-385b34b7d74b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     }
   ]
 }
